# Percent

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  ROADMAP.md  SHELVED.md  pyproject.toml
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
engram/: __init__.py  cli.py  config.py  models.py  web.py
engram/chat/: engine.py
engram/export/: soul_md.py
engram/llm/: __init__.py  client.py
engram/parsers/: __init__.py  base.py  bilibili.py  bilibili_api.py  telegram.py  wechat.py  wechat_db.py  whatsapp.py  youtube.py
engram/persona/: bench.py  engine.py  extractor.py  fingerprint.py  fragments.py  synthesizer.py  validator.py
engram/static/: index.html
percent/: __init__.py  cli.py  config.py  models.py  web.py
percent/chat/: engine.py
percent/export/: soul_md.py
percent/llm/: __init__.py  client.py
percent/parsers/: __init__.py  base.py  bilibili.py  bilibili_api.py  telegram.py  telegram_api.py  wechat.py  wechat_db.py  whatsapp.py  xiaohongshu.py  youtube.py  youtube_api.py
percent/persona/: bench.py  big_five.py  cross_validate.py  engine.py  extractor.py  fingerprint.py  fragments.py  manifest.py  spectrum.py  synthesizer.py  validator.py
percent/prompts/: big_five.md  chat_system.md  deep_analyze.md  extract.md  poster_generate.md  soul_export.md  (+2 more)
prompts/: chat_system.md  extract.md  synthesize.md
tests/: conftest.py  test_big_five.py  test_chat.py  test_config.py  test_cross_validate.py  test_export.py  test_llm.py  test_models.py  test_web_evidence.py  test_web_spectrum.py
(+18 files in other folders)
